fix spacing

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -150,3 +150,7 @@ body { padding-top: 85px; }
     margin-top: 100px;
     text-align: center;
 }
+
+.business-single-client {
+    margin-bottom: 200px;
+}
